--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "conversion-quiz"]
 	path = conversion-quiz
-	url = git@github.com:stevekerrison/conversion-quiz.git
+	url = https://github.com/stevekerrison/conversion-quiz.git
